Added aboutme ljnes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                         <div class="content">
                             <p>
                                 I have been solving problems in Java since I was but a suckling on my mother's bosom. 
-								I have a degree in Computer Science from a prestigious R1 university. Pls hire me.
+								I have a degree in Computer Science from a prestigious R1 university. Pls hire me, I literally need food.
+								This is a template of dev portfolio. It is a work in progress. Slow progress. But progress none the less.
+								Come back later for some updates and news!
                             </p>
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
